<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingBottom="50dp">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="25dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="match_parent"
            android:src="@drawable/blank_profile"
            android:id="@+id/selfie_thumbnail"
            android:layout_height="100dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:textColorHighlight="@color/colorAccent"
            android:text="Upload Profile Photo"
            android:id="@+id/uploadPhotoBtn"
            android:background="@drawable/button_background"
            android:textAppearance="@android:style/TextAppearance.Material.Large.Inverse" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:text="Emergency Contact Info"
        android:id="@+id/eContactText"
        android:onClick="toggleContact"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/contact_layout"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="17dp"
            android:textColor="@color/colorPrimary"
            android:text="Contact Name"/>

        <EditText android:id="@+id/input_emergency_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:hint="John Doe"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:textColor="@color/colorPrimary"
            android:text="Contact Relationship"/>

        <EditText android:id="@+id/input_emergency_relationship"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:hint="Friend"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:textColor="@color/colorPrimary"
            android:text="Contact Phone"/>

        <EditText android:id="@+id/input_emergency_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:hint="555-555-5555"
            android:textColor="@color/black"/>
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:textStyle="bold"
        android:textSize="18dp"
        android:textColor="@color/colorPrimaryDark"
        android:text="About me"
        android:onClick="toggleAboutMe"
        android:id="@+id/about_me_text" />

    <LinearLayout android:id="@+id/about_me_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/input_about_me"
            android:hint="i.e. I like hanging out" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:text="Preferences"
        android:id="@+id/preferences_text"
        android:onClick="togglePreferences"/>

    <RelativeLayout android:id="@+id/questionnaire_checkboxes"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp">

        <CheckBox android:id="@+id/smoking_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Smoking"/>

        <CheckBox android:id="@+id/drinking_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:text="Drinking"/>

        <CheckBox android:id="@+id/guests_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="180dp"
            android:text="Guests"/>

        <CheckBox android:id="@+id/pets_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="260dp"
            android:text="Pets"/>

    </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:textSize="18dp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:text="+ Pet Peeves"
            android:onClick="togglePetPeeves"
            android:id="@+id/pet_peeves_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/pet_peeve_layout"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:onClick="togglePetPeeves">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/input_pet_peeve"
            android:hint="i.e. I hate hanging out at night" />
    </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:text="Allergies"
            android:id="@+id/allergies_text"
            android:onClick="toggleAllergies"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/allergies_layout"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/input_allergies"
            android:hint="i.e. Sea Salt"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp">

        <Button
            android:text="Save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="uploadData"
            android:background="@drawable/button_background"
            android:textAppearance="@android:style/TextAppearance.Material.Large.Inverse" />
    </LinearLayout>

</LinearLayout>

</ScrollView>