...
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="signup_option"><u>No account yet? Create one.</u></string>
    <string name="login_option"><u>Already a member? Login.</u></string>
    <string name="title_activity_join_group">JoinGroup</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="go_back">OK</string>
    <string name="go_profile">PROFILE</string>

...
