...
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:text="Login"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"/>

            <TextView android:id="@+id/link_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/signup_option"
                android:gravity="center"
                android:textSize="16dip"
...
